Replace table with keyword in temaplate file

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Build site
         run: |
-          python3 src/build_site.py >> build/index.html
+          python3 src/build_site.py > build/index.html
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
